# nanonet

./: CMakeLists.txt  Doxyfile.in  README.md  example.c
.github/workflows/: cmake-multi-platform.yml
docs/: README.md  opcodes.md
examples/: custom_allocator.c  inference.c  status.c
include/: NanoNet.h
src/: NanoNet.c
tests/: CMakeLists.txt  module.cpp  ops.cpp  train.cpp
